--- a/DontPause/manifest.json
+++ b/DontPause/manifest.json
@@ -2,10 +2,10 @@
   "$schema": "https://raw.githubusercontent.com/bsmg/BSIPA-MetadataFileSchema/master/Schema.json",
   "id": "DontPause",
   "name": "DontPause",
-  "author": "",
-  "version": "0.0.2",
+  "author": "denpadokei",
+  "version": "0.0.3",
   "description": "",
-  "gameVersion": "1.20.0",
+  "gameVersion": "1.34.0",
   "dependsOn": {
     "BSIPA": "^4.2.0"
   }
